fix: z-index between parallax and tournament list

--- a/src/app/style.module.scss
+++ b/src/app/style.module.scss
@@ -202,7 +202,7 @@
       width: 100%;
       height: 100%;
       background: linear-gradient(90deg, rgba($primary-background, 1) 40%, rgba($primary-background, 0) 50%);
-      z-index: 2;
+      z-index: 0;
       pointer-events: none;
     }
 
@@ -223,7 +223,7 @@
     }
 
     .list {
-      z-index: 1;
+      z-index: 0;
     }
   }
 }
